Messed with theme more, mostly the title slide. Also figured out a way to fix the equations from being code color by wrapping in .large, which also helps re-up the size because all other code is set at 90%

--- a/xaringan_uo_theme/uo.css
+++ b/xaringan_uo_theme/uo.css
@@ -1,10 +1,50 @@
+/*Playing around with maybe having a border at the top*/
+/*.remark-slide-content {
+  border-top: 80px solid #007935;
+}
+
+.remark-slide-content > h1 {
+  margin-top: -95px;
+  color: #fff;
+}
+*/
 .title-slide {
   background-image: url(UOSignature-107-4C.svg);
-  background-position: 50% 95%;
-  background-size: 125px;
-  background-repeat: no-repeat;
-  z-index: 99;
+  background-position: 95% 95%;
+  background-size: 200px;
+  border: 20px solid #154733;;
 }
+
+.title-slide h1 {
+  padding-top: 250px;
+  font-size: 65px;
+  line-height: 0.05;
+  text-align: left;
+  padding-bottom: 18px;
+  margin-bottom: 18px;
+}
+
+.title-slide h2 {
+  font-size: 50px;
+  text-align: left;
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+.title-slide h3 {
+  font-size: 30px;
+  color: #26272A;
+  text-align: left;
+  text-shadow: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 1;
+}
+
+.title-slide .remark-slide-number {
+  display: none;
+}
+
 
 h1, h2, h3 {
   font-weight: normal;
@@ -19,20 +59,17 @@ a:hover {
 }
 
 code {
-  color: #000;
-  background-color: #eee;
+  color: #007935;
   text-decoration: none;
-  padding-left: .2em;
-  padding-right: .2em;
   font-size: 90%;
 
 }
-.remark-code-line-highlighted     { background-color: #FEE123; }
+.remark-code-line-highlighted     { background-color: rgba(254, 225, 35, .5); }
 
 .inverse {
-  background-color: #154733;
+  background-color: #007935;
   /*text-shadow: 0 0 2px #E1E000;*/
 }
-.inverse h1, .inverse h2, .inverse h3 {
+/*.inverse h1, .inverse h2, .inverse h3 {
   color: #FEE123;
-}
+}*/
